--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,5 +4,29 @@ body{
 	border: 1px solid hotpink;
 	color: black; /*color letra*/
 	font-size: 16px; /*tamaño de caracteres de toda la pagina*/
+	margin: 0px auto; /*auto acomoda en el centro la caja*/
 	max-width: 1024px;
 }
+header{
+	border: 1px solid green;
+	text-align: center;
+}
+header img{
+	float: right; /*lugar de la imagen*/
+	margin: -70px 20px 0px 0px;
+	width: 90px;
+}
+header nav ul li{
+	/*border: 1px solid white;*/
+	background: purple;
+	border-radius: 20px; /*redondea el borde de la caja*/
+	color: white;
+	display: inline-block;
+	padding: 5px 10px;
+	margin: 0px 10px 0px 0px;
+	width: 84px;
+}
+/*padding es espacio entre texto y caja; margin es espacio entre cajas*/
+/*padding: 5px;->los 4 lados*/
+/*padding: 5px 10px; -> 5-arriba y abajo y 10-izquierda y derecha*/
+/*padding: 5px 10px 2px 8px; arriba, derecha, abajo, izquierda*/
