practica CSS3 03-sin terminar

--- a/practica03css/css/estilos.css
+++ b/practica03css/css/estilos.css
@@ -14,3 +14,10 @@ header nav ul li{
 	color: white;
 	padding: 7px;
 }
+.mithema{
+	color: gray;
+	font-size: 1em;
+}
+body section{
+	display: inline-block;
+}
